--- a/index.html
+++ b/index.html
@@ -1,180 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Parental Control Dashboard</title>
-<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 15px;
-    margin: 0;
-    background: #f9f9f9;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Parental Control Dashboard</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 15px;
+      background: #f4f4f4;
+    }
 
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 1.8em;
-    color: #333;
-  }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
 
-  .filter-select {
-    margin-bottom: 15px;
-    font-size: 1em;
-  }
+    select {
+      margin: 10px 5px;
+      padding: 8px;
+      font-size: 1em;
+    }
 
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 100%;
-    overflow-x: auto;
-    display: block;
-  }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
 
-  thead {
-    background-color: #007BFF;
-    color: white;
-  }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+      font-size: 1em;
+    }
 
-  th, td {
-    text-align: left;
-    padding: 12px 10px;
-    border: 1px solid #ddd;
-    font-size: 1em;
-    white-space: nowrap;
-  }
+    thead {
+      background-color: #007BFF;
+      color: white;
+    }
 
-  tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+    .chart-container {
+      max-width: 600px;
+      margin: 20px auto;
+    }
 
-  tbody tr:hover {
-    background-color: #e9ecef;
-  }
-
-  @media (max-width: 600px) {
-    h1 { font-size: 1.5em; }
-    th, td { font-size: 0.9em; padding: 10px 6px; }
-  }
-
-  .table-container {
-    overflow-x: auto;
-  }
-</style>
+    @media (max-width: 600px) {
+      table, th, td {
+        font-size: 0.9em;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<h1>Parental Control Dashboard</h1>
+  <h1>Parental Control Dashboard</h1>
 
-<select id="date-select" class="filter-select"></select>
+  <label for="child-select">Select Child:</label>
+  <select id="child-select"></select>
 
-<div class="table-container">
-  <table id="dashboard-table" aria-label="Parental Control Daily Usage">
+  <label for="date-select">Select Date:</label>
+  <select id="date-select"></select>
+
+  <div class="chart-container">
+    <canvas id="appChart"></canvas>
+  </div>
+
+  <table>
     <thead>
       <tr>
         <th>Child Name</th>
-        <th>Total Minutes (Today)</th>
-        <th>Average Session</th>
+        <th>Total Minutes</th>
+        <th>Avg. Session</th>
+        <th>Time Limit (Editable)</th>
         <th>Last Login</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="stats-body"></tbody>
   </table>
-</div>
 
 <script>
 const csvUrl = 'PASTE_YOUR_PUBLISHED_CSV_URL_HERE';
+let rawRows = [];
+let timeLimits = {}; // { "ChildName": timeLimit }
+let selectedChild = '';
+let selectedDate = '';
 
-let parsedRows = [];
-
-function groupDataByDate(data) {
-  const byDate = {};
-
-  data.forEach(row => {
-    const [timestamp, childName, activeWindow, openApps, sessionMinutes] = row;
-    const dateStr = new Date(timestamp).toISOString().split("T")[0]; // "YYYY-MM-DD"
-
-    if (!byDate[dateStr]) byDate[dateStr] = [];
-    byDate[dateStr].push({ timestamp, childName, sessionMinutes: parseInt(sessionMinutes) });
-  });
-
-  return byDate;
+function parseCSV(data) {
+  data.shift(); // remove headers
+  return data
+    .filter(row => row.length >= 5)
+    .map(row => ({
+      timestamp: row[0],
+      childName: row[1],
+      activeWindow: row[2],
+      openApps: row[3],
+      sessionMinutes: parseInt(row[4])
+    }));
 }
 
-function renderDateDropdown(dates) {
-  const select = document.getElementById('date-select');
-  select.innerHTML = '';
-
-  dates.sort().reverse().forEach(date => {
-    const option = document.createElement('option');
-    option.value = date;
-    option.textContent = date;
-    select.appendChild(option);
-  });
-
-  select.addEventListener('change', () => {
-    renderTableForDate(select.value);
-  });
-
-  renderTableForDate(select.value);
-}
-
-function renderTableForDate(date) {
-  const tableBody = document.querySelector('#dashboard-table tbody');
-  tableBody.innerHTML = '';
-
-  const rows = parsedRows.filter(row => new Date(row.timestamp).toISOString().startsWith(date));
-  const summary = {};
-
+function groupByDateAndChild(rows) {
+  const grouped = {};
   rows.forEach(row => {
-    const { childName, sessionMinutes, timestamp } = row;
-    if (!summary[childName]) {
-      summary[childName] = {
-        total: 0,
-        sessions: [],
-        lastLogin: null
-      };
-    }
-    summary[childName].total += sessionMinutes;
-    summary[childName].sessions.push(sessionMinutes);
+    const date = new Date(row.timestamp).toISOString().split('T')[0];
+    const key = `${row.childName}-${date}`;
+    if (!grouped[key]) grouped[key] = [];
+    grouped[key].push(row);
+  });
+  return grouped;
+}
 
-    const ts = new Date(timestamp);
-    if (!summary[childName].lastLogin || ts > summary[childName].lastLogin) {
-      summary[childName].lastLogin = ts;
+function extractUniqueDates(rows) {
+  const dates = new Set(rows.map(row => new Date(row.timestamp).toISOString().split("T")[0]));
+  return [...dates].sort().reverse();
+}
+
+function extractUniqueChildren(rows) {
+  const names = new Set(rows.map(r => r.childName));
+  return [...names].sort();
+}
+
+function updateDropdowns(children, dates) {
+  const childSel = document.getElementById("child-select");
+  const dateSel = document.getElementById("date-select");
+  childSel.innerHTML = '';
+  dateSel.innerHTML = '';
+
+  children.forEach(name => {
+    const opt = document.createElement("option");
+    opt.value = name;
+    opt.textContent = name;
+    childSel.appendChild(opt);
+  });
+
+  dates.forEach(date => {
+    const opt = document.createElement("option");
+    opt.value = date;
+    opt.textContent = date;
+    dateSel.appendChild(opt);
+  });
+
+  selectedChild = children[0];
+  selectedDate = dates[0];
+
+  childSel.addEventListener("change", () => {
+    selectedChild = childSel.value;
+    renderEverything();
+  });
+
+  dateSel.addEventListener("change", () => {
+    selectedDate = dateSel.value;
+    renderEverything();
+  });
+}
+
+function summarizeData(rows) {
+  const summary = {};
+  rows.forEach(row => {
+    if (!summary[row.childName]) {
+      summary[row.childName] = { total: 0, sessions: [], lastLogin: null };
+    }
+    summary[row.childName].total += row.sessionMinutes;
+    summary[row.childName].sessions.push(row.sessionMinutes);
+    const t = new Date(row.timestamp);
+    if (!summary[row.childName].lastLogin || t > summary[row.childName].lastLogin) {
+      summary[row.childName].lastLogin = t;
     }
   });
+  return summary;
+}
+
+function renderStats(summary) {
+  const tbody = document.getElementById("stats-body");
+  tbody.innerHTML = '';
 
   Object.entries(summary).forEach(([child, stats]) => {
     const avg = (stats.total / stats.sessions.length).toFixed(1);
-    const lastLogin = stats.lastLogin.toLocaleString();
+    const last = stats.lastLogin.toLocaleString();
+    const limit = timeLimits[child] || 60;
+    const isOver = stats.total > limit;
 
-    const row = document.createElement('tr');
+    const row = document.createElement("tr");
     row.innerHTML = `
       <td>${child}</td>
-      <td>${stats.total}</td>
+      <td style="color:${isOver ? 'red' : 'black'}">${stats.total}</td>
       <td>${avg}</td>
-      <td>${lastLogin}</td>
+      <td><input type="number" value="${limit}" data-child="${child}" style="width:60px"/></td>
+      <td>${last}</td>
     `;
-    tableBody.appendChild(row);
+    tbody.appendChild(row);
   });
+
+  // Handle manual edits to limits
+  document.querySelectorAll("input[type=number]").forEach(input => {
+    input.addEventListener("change", () => {
+      const name = input.dataset.child;
+      const newLimit = parseInt(input.value);
+      timeLimits[name] = newLimit;
+      renderEverything();
+    });
+  });
+}
+
+function buildAppPieChart(rows) {
+  const appCounts = {};
+  rows.forEach(r => {
+    const apps = r.openApps.split(',');
+    apps.forEach(app => {
+      const name = app.trim();
+      if (!appCounts[name]) appCounts[name] = 0;
+      appCounts[name]++;
+    });
+  });
+
+  const labels = Object.keys(appCounts);
+  const counts = Object.values(appCounts);
+
+  const chart = new Chart(document.getElementById("appChart"), {
+    type: "pie",
+    data: {
+      labels,
+      datasets: [{
+        label: "App Usage",
+        data: counts,
+        backgroundColor: labels.map((_, i) =>
+          `hsl(${i * 360 / labels.length}, 70%, 60%)`
+        )
+      }]
+    },
+    options: {
+      plugins: {
+        legend: {
+          position: 'bottom'
+        }
+      }
+    }
+  });
+}
+
+function renderEverything() {
+  const filtered = rawRows.filter(row =>
+    row.childName === selectedChild &&
+    new Date(row.timestamp).toISOString().startsWith(selectedDate)
+  );
+
+  const summary = summarizeData(filtered);
+  renderStats(summary);
+  buildAppPieChart(filtered);
 }
 
 Papa.parse(csvUrl, {
   download: true,
   complete: function(results) {
-    results.data.shift(); // remove header
-    parsedRows = results.data.filter(row => row.length >= 5).map(row => ({
-      timestamp: row[0],
-      childName: row[1],
-      activeWindow: row[2],
-      openApps: row[3],
-      sessionMinutes: row[4]
-    }));
+    rawRows = parseCSV(results.data);
+    const children = extractUniqueChildren(rawRows);
+    const dates = extractUniqueDates(rawRows);
+    children.forEach(name => timeLimits[name] = 60); // default
 
-    const groupedByDate = groupDataByDate(parsedRows);
-    renderDateDropdown(Object.keys(groupedByDate));
+    updateDropdowns(children, dates);
+    renderEverything();
   }
 });
 </script>
