--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
   </table>
 
 <script>
-const csvUrl = 'PASTE_YOUR_PUBLISHED_CSV_URL_HERE';
+const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRO214XiVePEkiLFjNf7or55rEXmaMzl3pTTiE_7B7K0NcAZuNE0gtZqJYwt5XRYAmxiz_OHtZbhwN7/pub?gid=0&single=true&output=csv';
 let rawRows = [];
-let timeLimits = {}; // { "ChildName": timeLimit }
+let timeLimits = {};
 let selectedChild = '';
 let selectedDate = '';
 
 function parseCSV(data) {
-  data.shift(); // remove headers
+  data.shift();
   return data
     .filter(row => row.length >= 5)
     .map(row => ({
@@ -192,7 +192,6 @@ function renderStats(summary) {
     tbody.appendChild(row);
   });
 
-  // Handle manual edits to limits
   document.querySelectorAll("input[type=number]").forEach(input => {
     input.addEventListener("change", () => {
       const name = input.dataset.child;
@@ -217,7 +216,7 @@ function buildAppPieChart(rows) {
   const labels = Object.keys(appCounts);
   const counts = Object.values(appCounts);
 
-  const chart = new Chart(document.getElementById("appChart"), {
+  new Chart(document.getElementById("appChart"), {
     type: "pie",
     data: {
       labels,
@@ -256,7 +255,7 @@ Papa.parse(csvUrl, {
     rawRows = parseCSV(results.data);
     const children = extractUniqueChildren(rawRows);
     const dates = extractUniqueDates(rawRows);
-    children.forEach(name => timeLimits[name] = 60); // default
+    children.forEach(name => timeLimits[name] = 60); // default 60 mins
 
     updateDropdowns(children, dates);
     renderEverything();
